--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -13,8 +13,8 @@
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:Support@example.com">igor@impacta.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing-do-igor@impacta.com</a>
 </address>
 
 {% endblock %}
